[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://assets/ui.theme" type="Theme" id=2]
[ext_resource path="res://scripts/PlayingControls.gd" type="Script" id=3]
[ext_resource path="res://scripts/DrawControls.gd" type="Script" id=4]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TopBar" type="PanelContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0.572549 )
anchor_right = 1.0
margin_bottom = 80.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1059.0
margin_bottom = 73.0
mouse_filter = 2
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenCounter" type="HBoxContainer" parent="TopBar/HBoxContainer"]
margin_right = 158.0
margin_bottom = 66.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TopBar/HBoxContainer/GenCounter"]
margin_right = 60.0
margin_bottom = 66.0
size_flags_vertical = 1
text = "Gen:"

[node name="Value" type="Label" parent="TopBar/HBoxContainer/GenCounter"]
margin_left = 64.0
margin_right = 158.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"
valign = 1

[node name="PlayControls" type="HBoxContainer" parent="TopBar/HBoxContainer"]
margin_left = 162.0
margin_right = 523.0
margin_bottom = 66.0
script = ExtResource( 3 )

[node name="ButtonPrev" type="Button" parent="TopBar/HBoxContainer/PlayControls"]
margin_right = 84.0
margin_bottom = 66.0
text = "Prev"

[node name="ButtonPlay" type="Button" parent="TopBar/HBoxContainer/PlayControls"]
margin_left = 88.0
margin_right = 163.0
margin_bottom = 66.0
text = "Play"

[node name="ButtonNext" type="Button" parent="TopBar/HBoxContainer/PlayControls"]
margin_left = 167.0
margin_right = 254.0
margin_bottom = 66.0
text = "Next"

[node name="Separator3" type="Label" parent="TopBar/HBoxContainer/PlayControls"]
margin_left = 258.0
margin_right = 258.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="ButtonReset" type="Button" parent="TopBar/HBoxContainer/PlayControls"]
margin_left = 262.0
margin_right = 361.0
margin_bottom = 66.0
text = "Reset"

[node name="Separator2" type="Label" parent="TopBar/HBoxContainer"]
margin_left = 527.0
margin_right = 685.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="DrawControls" type="HBoxContainer" parent="TopBar/HBoxContainer"]
margin_left = 689.0
margin_right = 1052.0
margin_bottom = 66.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="TopBar/HBoxContainer/DrawControls"]
margin_right = 165.0
margin_bottom = 66.0
size_flags_vertical = 1
text = "Draw Mode:"

[node name="Add" type="Button" parent="TopBar/HBoxContainer/DrawControls"]
margin_left = 169.0
margin_right = 229.0
margin_bottom = 66.0
rect_min_size = Vector2( 60, 0 )
text = "+"

[node name="Both" type="Button" parent="TopBar/HBoxContainer/DrawControls"]
self_modulate = Color( 0, 1, 0.156863, 1 )
margin_left = 233.0
margin_right = 299.0
margin_bottom = 66.0
rect_min_size = Vector2( 60, 0 )
text = "+/-"

[node name="Remove" type="Button" parent="TopBar/HBoxContainer/DrawControls"]
margin_left = 303.0
margin_right = 363.0
margin_bottom = 66.0
rect_min_size = Vector2( 60, 0 )
text = "-"

[connection signal="pressed" from="TopBar/HBoxContainer/PlayControls/ButtonPrev" to="TopBar/HBoxContainer/PlayControls" method="_on_ButtonPrev_pressed"]
[connection signal="pressed" from="TopBar/HBoxContainer/PlayControls/ButtonPlay" to="TopBar/HBoxContainer/PlayControls" method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="TopBar/HBoxContainer/PlayControls/ButtonNext" to="TopBar/HBoxContainer/PlayControls" method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="TopBar/HBoxContainer/PlayControls/ButtonReset" to="." method="_on_ButtonReset_pressed"]
[connection signal="pressed" from="TopBar/HBoxContainer/DrawControls/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="TopBar/HBoxContainer/DrawControls/Both" to="." method="_on_Both_pressed"]
[connection signal="pressed" from="TopBar/HBoxContainer/DrawControls/Remove" to="." method="_on_Remove_pressed"]
